logs/Slang/generated/keywords/5.6.2--keyword_timeunit.sv.log
name: keyword_timeunit
description: The 'timeunit' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_timeunit.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_timeunit.sv:8:8: error: expected declarator
    bit timeunit;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_timeunit.sv:8:17: error: expected time literal
    bit timeunit;
                ^
